# rubin-dash

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fov_map.npz  large_query.txt  make_dashboard.py  medium_query.txt  moon_test.csv  plot_runner.py  pyproject.toml  schema.sql  small_query.txt  temp_data_runner.ipynb  test_runner.py  test_runner_v2.py  test_runner_v3.py  test_runner_v4.py
.github/workflows/: build-docker-harbor.yml  ci.yaml  deploy-canfar.yml
make_dashboard/: temp_data_runner.ipynb
src/rubin_dash/: __init__.py  __main__.py  app.py  config.py  core.py  database.py  displays.py  lsst.py  monitoring.py  observability.py  pipeline.py  state.py  stress_monitor.py  utils.py
static/: styles.css
static/css/: colors-forest.css  colors-midnight.css  colors-ocean.css  colors-option1.css  colors-option2.css  colors-option3.css  colors-option4.css  colors-sunset.css  styles-shared.css  styles.css
static/js/: handlers.js  main.js
templates/: index.html
tests/: test_comet.py  test_config.py  test_database.py  test_utils.py
utils/: util_dashboard.py  util_data.py
