[project]
name = "rubin-dash"
version = "0.1.0"
description = "CanDIAPL Dashboard for Rubin LSST progress"
readme = "README.md"
authors = [
    { name = "Anna Ordog", email = "aordog@uwo.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "flask",
    "psycopg2-binary",
    "pandas",
    "plotly",          
]

[project.scripts]
rubin_dash = "rubin_dash.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rubin_dash"]        # THIS is the key line for a src/ layout