[project]
name = "rubin-dash"
version = "0.1.0.dev0"
description = "CanDIAPL Dashboard for Rubin LSST progress"
readme = "README.md"
authors = [
    { name = "Anna Ordog", email = "aordog@uwo.ca" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=2.0",
    "psycopg2-binary>=2.9",
    "pandas>=1.5",
    "plotly>=5.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "healpy>=1.16",
    "astropy>=5.0",
    "ephem>=4.1",
    "requests>=2.25",
    "rubin-scheduler>=1.0",
    "psutil>=5.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "playwright>=1.40.0",
]

[project.scripts]
rubin_dash = "rubin_dash.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rubin_dash"]      